After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 782561 - week-header: fix memory leak
week-header: fix memory leak
Status: RESOLVED FIXED
Product: gnome-calendar
Classification: Applications
Component: General
unspecified
Other All
: Normal normal
: 3.26
Assigned To: GNOME Calendar maintainers
GNOME Calendar maintainers
Depends on:
Blocks:
 
 
Reported: 2017-05-12 14:53 UTC by Mohammed Sadiq
Modified: 2017-05-15 20:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
week-header: fix memory leak (1.28 KB, patch)
2017-05-12 14:53 UTC, Mohammed Sadiq
committed Details | Review

Description Mohammed Sadiq 2017-05-12 14:53:34 UTC
.
Comment 1 Mohammed Sadiq 2017-05-12 14:53:42 UTC
Created attachment 351730 [details] [review]
week-header: fix memory leak
Comment 2 Georges Basile Stavracas Neto 2017-05-15 20:23:27 UTC
Review of attachment 351730 [details] [review]:

lgtm
Comment 3 Georges Basile Stavracas Neto 2017-05-15 20:25:01 UTC
Attachment 351730 [details] pushed as 4dde284 - week-header: fix memory leak